@@ -6,3 +6,4 @@ TODO / Feature list
 ++ multiple user accounts and stuff
 + adapt new php 7
 ++ http://php.net/manual/en/migration70.new-features.php#migration70.new-features.null-coalesce-op
++ combine cat and tag class into one.
