@@ -52,31 +52,40 @@ class Category {
 	/**
 	 * by given string load the info from the DB and even create if not existing
 	 * @param string $string
+     * @return int 0=fail, 1=existing, 2=new, 3=newNotCreated
 	 * @return bool|int
 	 */
-	public function initbystring($string) {
+    public function initbystring($string, $doNotCreate=false) {
+        $ret = 0;
 		$this->_id = false;
-		if(!empty($string)) {
-			$queryStr = "SELECT `id`,`name` FROM `".DB_PREFIX."_category`
+        if(!empty($string)) {
+            $queryStr = "SELECT `id`,`name` FROM `".DB_PREFIX."_category`
 							WHERE `name` = '".$this->DB->real_escape_string($string)."'";
-			$query = $this->DB->query($queryStr);
-			if(!empty($query) && $query->num_rows > 0) {
-				$result = $query->fetch_assoc();
-				$this->_id = $result['id'];
-				$this->_data = $result;
-			}
-			else {
-				$queryStr = "INSERT INTO `".DB_PREFIX."_category`
-								SET `name` = '".$this->DB->real_escape_string($string)."'";
-				$this->DB->query($queryStr);
-				if(!empty($this->DB->insert_id)) {
-					$this->_id = $this->DB->insert_id;
-					$this->_data['id'] = $this->_id;
-					$this->_data['name'] = $string;
-				}
-			}
-		}
-		return $this->_id;
+            $query = $this->DB->query($queryStr);
+            if(!empty($query) && $query->num_rows > 0) {
+                $result = $query->fetch_assoc();
+                $this->_id = $result['id'];
+                $this->_data = $result;
+                $ret = 1;
+            }
+            else {
+                if(!$doNotCreate) {
+                    $queryStr = "INSERT INTO `" . DB_PREFIX . "_category`
+                                    SET `name` = '" . $this->DB->real_escape_string($string) . "'";
+                    $this->DB->query($queryStr);
+                    if (!empty($this->DB->insert_id)) {
+                        $this->_id = $this->DB->insert_id;
+                        $this->_data['id'] = $this->_id;
+                        $this->_data['name'] = $string;
+                        $ret = 2;
+                    }
+                }
+                else {
+                    $ret=3;
+                }
+            }
+        }
+		return $ret;
 	}
 
 	/**
@@ -131,6 +140,26 @@ class Category {
 		}
 	}
 
+    /**
+     * Return an array of any linkid related to the current loaded category
+     * @return array
+     */
+    public function getReleations() {
+        $ret = array();
+
+        $queryStr = "SELECT linkid 
+	                FROM `".DB_PREFIX."_categoryrelation` 
+	                WHERE `categoryid` = '".$this->DB->real_escape_string($this->_id)."'";
+        $query = $this->DB->query($queryStr);
+        if(!empty($query) && $query->num_rows > 0) {
+            while($result = $query->fetch_assoc()) {
+                $ret[] = $result['linkid'];
+            }
+        }
+
+        return $ret;
+    }
+
 	/**
 	 * deletes the current loaded category from db
 	 * @return boolean
@@ -165,4 +194,19 @@ class Category {
 
 		return $ret;
 	}
+
+    /**
+     * Rename current loaded cat name
+     * @param $newValue
+     * @return void
+     */
+    public function rename($newValue) {
+        if(!empty($newValue)) {
+            $queryStr = "UPDATE `".DB_PREFIX."_category`
+	                    SET `name` = '".$this->DB->real_escape_string($newValue)."'
+	                    WHERE `id` = '".$this->DB->real_escape_string($this->_id)."'";
+            $this->DB->query($queryStr);
+            $this->_data['name'] = $newValue;
+        }
+    }
 }
