@@ -2,6 +2,7 @@ version x.x.x - Darkmere ()
 
     + Fixed bug #8 It is possible to add empty tags and categories.
         Special chars check done on server side. JS has problems with unicode.
+    + Fixed bug #7 Edit categories/tags. Rename and move
 
 
 version 2.5.1 - Caves of Circe (2020-03-22)
